# radar-core

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  publish-package.yml
data/: govradar_data.duckdb  radar_data.duckdb
radar_core/: __init__.py  adaptive_throttle.py  analyzer.py  browser_collector.py  collector.py  config_loader.py  crawl_health.py  date_storage.py  dedup.py  exceptions.py  lineage.py  logger.py  migration.py  models.py  nl_query.py  notifier.py  ontology.py  raw_logger.py  reddit_collector.py  report_utils.py  resilience.py  search_index.py  source_health.py  storage.py  telegram_notifier.py  url_extractor.py  url_utils.py
radar_core/common/: __init__.py  korean_analyzer.py  quality_checks.py  validators.py
radar_core/plugins/: __init__.py  entity_heatmap.py  source_reliability.py
radar_core/templates/: index.html  report.html
reports/: govsupport_20260413_summary.json  govsupport_quality.json
tests/: test_analyzer.py  test_config_loader.py  test_crawl_health_safe_connect.py  test_dedup.py  test_exports.py  test_index_render.py  test_korean_analyzer.py  test_lineage.py  test_models.py  test_ontology.py  test_reddit_collector.py  test_report_render.py  test_report_utils.py  test_source_health.py  test_storage.py  test_url_extractor.py  test_url_utils.py
tests/unit/: conftest.py  test_adaptive_throttle.py  test_analyzer.py  test_browser_collector.py  test_collector_parallel.py  test_collector_retry.py  test_crawl_health.py  test_exports.py  test_migration.py  test_models_exceptions.py  test_raw_logger.py  test_storage.py  test_telegram_notifier.py
